Fix real MCP argument mismatches: cartId, and product search entirely
A live order finally got past cart creation and hit
silpo_get_shopping_cart_by_id with "Invalid input: expected string,
received undefined" for shoppingCartId — the tool's own schema requires
that key; this codebase had sent "cartId" everywhere, unvalidated until
now because no real account ever got this far in the sequence before.

Auditing every cart-flow argument against the schemas the DEBUG tool
catalogue captured turned up more of the same, one worse than a naming
mismatch:

- silpo_get_shopping_cart_by_id, silpo_add_or_update_cart_products: wrong
  key (cartId -> shoppingCartId), 3 call sites in CartBuildingService, 1 in
  ReorderConfirmationService.
- silpo_find_products_batch: the whole request shape was wrong. Sent as
  {items:[{name,quantity}]}; the real schema wants
  {branchId, deliveryType, timeslotStart, timeslotEnd, products:[<names>]}
  and answers with queries[], each carrying its own query text and its own
  products[] matches — not one flat product list. This is not a rename:
  every order that reached this call would have resolved zero products,
  silently, regardless of any other fix.
- silpo_get_time_slots: deliveryType (singular) is not a real parameter;
  the schema has deliveryTypes (plural, array). Harmless since branchId
  alone already scopes the result, fixed while auditing the rest.

CartContext's single opaque timeslot field — never actually read anywhere
— is now timeslotStart/timeslotEnd, both sourced the same lenient way as
everything else here, and both needed by the corrected product search.

Five test files scripted the old silpo_find_products_batch shape or read
the old outbound argument shape; all updated to match the real one.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QEGRU6Mwnr9M7u8R5A2suR